two average problem